# ProcessingFlow

./: .travis.yml  CMakeLists.txt  README.md
CMake/: BuildFlatBuffers.cmake
include/: error.h  opencv_utils.h  processing_node.h  project.h  result.h
src/: CMakeLists.txt  main.cpp  opencv_utils.cpp
src/schema/: CMakeLists.txt  any.fbs  error.fbs  node.fbs  opencv.fbs  project.fbs
test/: CMakeLists.txt  test_processing_node.cpp
